--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <%= @post.category.each do |cata| %>
-    <li><%= cata.name %></li>
+  <%= @category.post.each do |cat| %>
+    <li><%= cat.name %></li>
   <% end %>
 </ul>
