Automatically backed up by Learn

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @category.name %>
 <ul>
-  <%= @category.post.each do |cat| %>
-    <li><%= cat.name %></li>
+  <%= @category.post.each do |post| %>
+    <li><%= post.comment %></li>
   <% end %>
 </ul>
