--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,6 @@
 <ul>
   <%= @category.post.each do |post| %>
     <li><%= link_to post.title, post_path(post) %></li>
-    <li><%= post.comment %></li>
+    <li><%= post.content %></li>
   <% end %>
 </ul>
