--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @category.name %>
 <ul>
-  <%= @category.post.each do |post| %>
+  <%= @category.posts.each do |post| %>
     <li><%= link_to post.title, post_path(post) %></li>
     <li><%= post.content %></li>
   <% end %>
