Automatically backed up by Learn

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-
+category_1 = Category.create(name: "category")
+post_1 = Post.create(title: "Feeling Groovy", content: "I'm feeling so groovy")
+post_1.categories << category_1
